--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,15 +10,21 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        Calculator
+                        Calculator (Omit Whitespace)
                     </div>
                     <div class="panel-body">
                         <ul class="calc">
                             {% if ans %}
-                            <div class="alert alert-primary" role="alert">
-                                {{ tocalc }} = {{ ans }}
-                            </div>
+                                <div class="alert" role="alert">
+                                   <b>Current: </b> {{ tocalc }} = {{ ans }}
+                                </div>  
                             {% endif %}
+                            <b>Last 10 Calculations:</b>
+                            {% for prob in last %}
+                                <div class="alert" role="alert">
+                                    {{ prob }}
+                                </div>  
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="panel-footer">
